# captua

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REMEDIATION_PLAN.md  captua-overlay.desktop  install-captua.sh  pyproject.toml  run.sh
.github/workflows/: release.yml
captua/: __init__.py  backdrop.py  canvas.py  capture.py  colorwheel.py  emojipicker.py  history.py  icons.py  items.py  main.py  overlay.py  popups.py  selector.py  self_updater.py  settings.py  shapes.py  toolbar.py  tools.py  update_dialog.py  updater.py
docs/: GUIDE.md
scripts/: build-appimage.sh  debug.sh
tests/: conftest.py  test_capture.py  test_emoji_font.py  test_history.py  test_settings.py
