[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captua"
version = "0.1.0"
description = "A Shottr clone for Linux/Wayland"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=10.0.0",
]

[project.scripts]
captua = "captua.main:main"
